[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/dialogs/custom_dialog/DialogScript.gd" type="Script" id=1]
[ext_resource path="res://scenes/dialogs/custom_dialog/anim_fade_in.tres" type="Animation" id=2]
[ext_resource path="res://scenes/dialogs/custom_dialog/anim_reset.tres" type="Animation" id=3]
[ext_resource path="res://scenes/dialogs/custom_dialog/anim_fade_out.tres" type="Animation" id=4]

[node name="CustomDialog" type="PopupDialog"]
margin_right = 40.0
margin_bottom = 40.0
input_pass_on_modal_close_click = false
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = ExtResource( 3 )
anims/anim_fade_in = ExtResource( 2 )
anims/anim_fade_out = ExtResource( 4 )

[connection signal="about_to_show" from="." to="." method="about_to_show"]
[connection signal="popup_hide" from="." to="." method="popup_hide"]
